// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageSquareEffect > renders a square 3x3 correctly 1`] = `
<div>
  <div
    style="position: absolute; inset: 0; display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr); width: 100%; height: 100%;"
  >
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
  </div>
</div>
`;

exports[`ImageSquareEffect > renders a square 5x5 correctly 1`] = `
<div>
  <div
    style="position: absolute; inset: 0; display: grid; grid-template-columns: repeat(5, 1fr); grid-template-rows: repeat(5, 1fr); width: 100%; height: 100%;"
  >
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
  </div>
</div>
`;

exports[`ImageSquareEffect > renders a square 8x8 correctly 1`] = `
<div>
  <div
    style="position: absolute; inset: 0; display: grid; grid-template-columns: repeat(8, 1fr); grid-template-rows: repeat(8, 1fr); width: 100%; height: 100%;"
  >
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
  </div>
</div>
`;

exports[`ImageSquareEffect > renders with countdown 1`] = `
<div>
  <div
    style="position: absolute; inset: 0; display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(3, 1fr); width: 100%; height: 100%;"
  >
    <div
      style="width: 100%; height: 100%; background: transparent;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: transparent;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: transparent;"
    />
    <div
      style="width: 100%; height: 100%; background: transparent;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
    <div
      style="width: 100%; height: 100%; background: white;"
    />
  </div>
</div>
`;
